snippets/Nemerle.Statechart/Tests/testsuite/negative/composite_state_that_has_incoming_transition_must_have_initial.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing;
  //flags debug;
  
  name "fork transition";
  
  state A
  {
    a => B;
  }
    
  state B // E: Composite state "B" have incoming transitions and must have initial pseudostate targeting default state
  {
    state C
    {
      
    }
  }
  
  #>)]
  public class example
  {
  }

 
